# Data-Structures-And-Algorithms

./: .gitignore  .gitmodules  README.md
.github/workflows/: singleton_factory.yml
data-structures/cyclic-queue/: CMakeLists.txt  cyclic-queue-tests.cpp  cyclic-queue.hpp
design-patterns/modified-singleton/: README.md  example.cpp
design-patterns/singleton-factory/: CMakeLists.txt  README.md  example.cpp  singleton_factory.hpp  singleton_test.cpp
performance-experiments/disk-io-comparison/: README.md  plot.gp
performance-experiments/disk-io-comparison/mmap/: CMakeLists.txt  benchmark.cpp  fast_disk.hpp  main.cpp
performance-experiments/disk-io-comparison/std_c++/: CMakeLists.txt  benchmark.cpp  file_io.hpp  main.cpp
